QPID-2926: Better solution for instantiating qpid::messaging::Handle<> specialisations

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1525706 13f79535-47bb-0310-9956-ffa450edef68